<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/primaryLightColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

        <TextView
            android:text="@string/iniciar_sesion"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/txt_username"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/primaryTextColor"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <EditText
            android:hint="@string/password"
            android:id="@+id/txt_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/primaryTextColor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:text="@string/iniciar_sesion"
            android:textAllCaps="false"
            android:id="@+id/button_Login"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:textSize="15sp"
            android:id="@+id/txt_crear_cuenta"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:text="@string/texto_redireccion_registro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

    </LinearLayout>

</RelativeLayout>